[package]
name = "remnem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Find and delete every nested node_modules in a workspace as fast as possible"
repository = "https://github.com/leonsilicon/remnem"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
ignore = "0.4"
globset = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
