[package]
name = "remnem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Find and delete every nested node_modules in a workspace as fast as possible"
repository = "https://github.com/leonsilicon/remnem"

# The library exists so the finder / workspace logic can be unit-tested with
# `cargo test`. The shipped artifact is the `remnem` binary below.
[lib]
name = "remnem"
path = "src/lib.rs"

[[bin]]
name = "remnem"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
globset = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
